[gd_scene load_steps=43 format=3 uid="uid://bghlk20cvt4ed"]

[ext_resource type="Script" path="res://entities/enemies/amelia/Amelia.gd" id="1_du78g"]
[ext_resource type="AudioStream" uid="uid://chp8ex28kq2lk" path="res://sounds/Attack/Amelia/hurt1.mp3" id="3_3pboo"]
[ext_resource type="Texture2D" uid="uid://q5hk0cpek5v3" path="res://entities/enemies/amelia/Amelia_16x16.png" id="3_ia4er"]
[ext_resource type="AudioStream" uid="uid://cwklaph5bhi7b" path="res://sounds/Attack/Amelia/hurt2.mp3" id="4_32w82"]
[ext_resource type="AudioStream" uid="uid://c3c1yxtf8y3ok" path="res://sounds/Attack/Amelia/hurt3.mp3" id="5_7dyn2"]
[ext_resource type="AudioStream" uid="uid://yguchx33cmx1" path="res://sounds/Attack/Amelia/hurt4.mp3" id="6_eatkp"]
[ext_resource type="AudioStream" uid="uid://cjeecddfp86ci" path="res://sounds/Attack/Amelia/idle1.mp3" id="7_70n7k"]
[ext_resource type="AudioStream" uid="uid://d3hb87hmjw20t" path="res://sounds/Attack/Amelia/idle2.mp3" id="8_vck87"]
[ext_resource type="AudioStream" uid="uid://brsjrt4xp7q42" path="res://sounds/Attack/Amelia/idle3.mp3" id="9_85h4c"]
[ext_resource type="AudioStream" uid="uid://c8k86f0r5b2ee" path="res://sounds/Attack/Amelia/death1.mp3" id="10_iq2nh"]
[ext_resource type="AudioStream" uid="uid://dwwfoicnb0yp4" path="res://sounds/Attack/Amelia/death2.mp3" id="11_snofi"]
[ext_resource type="AudioStream" uid="uid://nb6lpn7angl1" path="res://sounds/Attack/Amelia/chase1.mp3" id="12_2un33"]
[ext_resource type="Script" path="res://entities/enemies/amelia/DeathSound.gd" id="12_xkdt3"]
[ext_resource type="AudioStream" uid="uid://bllo41ia8hkht" path="res://sounds/Attack/Amelia/chase2.mp3" id="13_lstco"]
[ext_resource type="AudioStream" uid="uid://djsp8lu8q7x4o" path="res://sounds/Attack/Amelia/chase3.mp3" id="14_kf8ib"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w0c26"]
atlas = ExtResource("3_ia4er")
region = Rect2(48, 8, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1d2w"]
atlas = ExtResource("3_ia4er")
region = Rect2(288, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2cki"]
atlas = ExtResource("3_ia4er")
region = Rect2(304, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vepsb"]
atlas = ExtResource("3_ia4er")
region = Rect2(320, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mumm5"]
atlas = ExtResource("3_ia4er")
region = Rect2(336, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_owtx7"]
atlas = ExtResource("3_ia4er")
region = Rect2(352, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydcff"]
atlas = ExtResource("3_ia4er")
region = Rect2(368, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5elf"]
atlas = ExtResource("3_ia4er")
region = Rect2(0, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_smohq"]
atlas = ExtResource("3_ia4er")
region = Rect2(16, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_umsjs"]
atlas = ExtResource("3_ia4er")
region = Rect2(32, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_whk48"]
atlas = ExtResource("3_ia4er")
region = Rect2(48, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdgal"]
atlas = ExtResource("3_ia4er")
region = Rect2(64, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbfjs"]
atlas = ExtResource("3_ia4er")
region = Rect2(80, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_702uo"]
atlas = ExtResource("3_ia4er")
region = Rect2(96, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wi8ci"]
atlas = ExtResource("3_ia4er")
region = Rect2(112, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_joee6"]
atlas = ExtResource("3_ia4er")
region = Rect2(128, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y70rw"]
atlas = ExtResource("3_ia4er")
region = Rect2(144, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_toskw"]
atlas = ExtResource("3_ia4er")
region = Rect2(160, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pksoi"]
atlas = ExtResource("3_ia4er")
region = Rect2(176, 72, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_w823c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0c26")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1d2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2cki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vepsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mumm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owtx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydcff")
}],
"loop": true,
"name": &"move_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5elf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smohq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umsjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whk48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdgal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbfjs")
}],
"loop": true,
"name": &"move_left_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_702uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wi8ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joee6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y70rw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_toskw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pksoi")
}],
"loop": true,
"name": &"move_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a23d6"]
radius = 9.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_76ql8"]
size = Vector2(15, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_qvqlk"]
radius = 100.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_0gddp"]
streams_count = 4
stream_0/stream = ExtResource("3_3pboo")
stream_0/weight = 1.0
stream_1/stream = ExtResource("4_32w82")
stream_1/weight = 1.0
stream_2/stream = ExtResource("5_7dyn2")
stream_2/weight = 1.0
stream_3/stream = ExtResource("6_eatkp")
stream_3/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qfma0"]
streams_count = 3
stream_0/stream = ExtResource("7_70n7k")
stream_0/weight = 1.0
stream_1/stream = ExtResource("8_vck87")
stream_1/weight = 1.0
stream_2/stream = ExtResource("9_85h4c")
stream_2/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8r3tj"]
streams_count = 2
stream_0/stream = ExtResource("10_iq2nh")
stream_0/weight = 1.0
stream_1/stream = ExtResource("11_snofi")
stream_1/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_k4l5i"]
streams_count = 3
stream_0/stream = ExtResource("12_2un33")
stream_0/weight = 1.0
stream_1/stream = ExtResource("13_lstco")
stream_1/weight = 1.0
stream_2/stream = ExtResource("14_kf8ib")
stream_2/weight = 1.0

[node name="Amelia" type="CharacterBody2D" groups=["Enemy"]]
scale = Vector2(0.75, 0.75)
collision_layer = 4
collision_mask = 41
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_du78g")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_w823c")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_a23d6")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 13)
shape = SubResource("RectangleShape2D_76ql8")

[node name="LineOfSight" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LineOfSight"]
visible = false
shape = SubResource("CircleShape2D_qvqlk")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_path_custom_point_size = 2.0

[node name="MovementTimer" type="Timer" parent="."]

[node name="PathFindingTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_0gddp")
pitch_scale = 1.33

[node name="IdleSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_qfma0")
pitch_scale = 1.33

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_8r3tj")
pitch_scale = 1.33
script = ExtResource("12_xkdt3")

[node name="ChaseSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_k4l5i")
pitch_scale = 1.33

[connection signal="body_entered" from="LineOfSight" to="." method="enemy_sees_player"]
[connection signal="timeout" from="MovementTimer" to="." method="handle_idle_movement"]
[connection signal="timeout" from="PathFindingTimer" to="." method="make_path"]
[connection signal="finished" from="DeathSound" to="DeathSound" method="_on_finished"]
